raw-manifests/local-production/monitoring/tempo/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tempo-prod-vs
  namespace: istio-system
spec:
  hosts:
    - "tempo.prod.local"
  gateways:
    - istio-ingressgateway-production
  http:
    - route:
        - destination:
            host: mon-tempo-prod.monitoring.svc.cluster.local
            port:
              number: 3100
